--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.19MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.25MB/s(Youtube:不良林), server: 85.208.108.94, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-3.49MB/s(Youtube:不良林), server: 85.208.108.94, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-624.4KB/s(Youtube:不良林), server: 85.208.108.94, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-1.21MB/s(Youtube:不良林), server: 85.208.108.94, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇫🇷 法国-1.18MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇷🇺 俄罗斯联邦-548.0KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 塞浦路斯-647.8KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇯🇵 日本-2.11MB/s(Youtube:不良林), server: 85.208.108.94, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇯🇵 日本-3.51MB/s(Youtube:不良林), server: 85.208.108.94, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-498.6KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-319.0KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-3.53MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.41MB/s(Youtube:不良林), server: 85.208.108.94, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇯🇵 日本-3.50MB/s(Youtube:不良林), server: 85.208.108.94, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇳 中国-1.30MB/s(Youtube:不良林), server: 43.155.101.188, port: 2292, type: vmess, uuid: 7731d35e-ddf5-47cb-f841-fa7d6e714735, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-624.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-548.0KB/s(Youtube:不良林)
-      - 塞浦路斯-647.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-498.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-624.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-548.0KB/s(Youtube:不良林)
-      - 塞浦路斯-647.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-498.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-624.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-548.0KB/s(Youtube:不良林)
-      - 塞浦路斯-647.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-498.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-624.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-548.0KB/s(Youtube:不良林)
-      - 塞浦路斯-647.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-498.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-624.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-548.0KB/s(Youtube:不良林)
-      - 塞浦路斯-647.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-498.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-624.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-548.0KB/s(Youtube:不良林)
-      - 塞浦路斯-647.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-498.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-624.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-548.0KB/s(Youtube:不良林)
-      - 塞浦路斯-647.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-498.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
