--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.11MB/s(Youtube:不良林), server: 85.208.108.94, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇯🇵 日本-3.51MB/s(Youtube:不良林), server: 85.208.108.94, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-498.6KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-319.0KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
   - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.53MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.41MB/s(Youtube:不良林), server: 85.208.108.94, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇯🇵 日本-3.50MB/s(Youtube:不良林), server: 85.208.108.94, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇳 中国-1.30MB/s(Youtube:不良林), server: 43.155.101.188, port: 2292, type: vmess, uuid: 7731d35e-ddf5-47cb-f841-fa7d6e714735, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇯🇵 日本-3.06MB/s(Youtube:不良林), server: 85.208.108.94, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇯🇵 日本-3.08MB/s(Youtube:不良林), server: 85.208.108.94, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-2.80MB/s(Youtube:不良林), server: 85.208.108.94, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-2.49MB/s(Youtube:不良林), server: 85.208.108.94, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.19MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 香港-1.30MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇬🇧 英国-842.1KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-3.09MB/s(Youtube:不良林), server: 85.208.108.94, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-498.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-498.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-498.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-498.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-498.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-498.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-498.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-319.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
